--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-copy-to-clipboard": "^5.0.2",
+    "react-device-detect": "^1.11.14",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1",
     "uniqid": "^5.2.0"
